--- a/Brand-guide.html
+++ b/Brand-guide.html
@@ -1061,9 +1061,9 @@
                 desc: `
                     <ul class="list-disc pl-5 space-y-2">
                         <li><strong>Status:</strong> The highest participant rank. 1 position available per event cycle.</li>
-                        <li><strong>Leadership:</strong> Leads a finalist team that demonstrated exceptional quality in previous events.</li>
-                        <li><strong>Mentorship:</strong> Expected to mentor junior teams (Ensigns) during the hackathon.</li>
-                        <li><strong>Perks:</strong> Eligible for special "Commander-only" prize pools or networking events.</li>
+                        <li><strong>Core Trait:</strong> Exemplifies exceptional collaboration and quality of work, regardless of final placement.</li>
+                        <li><strong>Understanding:</strong> Demonstrates a profound mastery of the hackathon's themes and concepts.</li>
+                        <li><strong>Future Path:</strong> Strong candidate for promotion to "Stella Command" staff in the next cycle.</li>
                     </ul>`
             },
             'lt_commander': {
@@ -1073,7 +1073,7 @@
                     <ul class="list-disc pl-5 space-y-2">
                         <li><strong>Responsibility:</strong> Leads a "Squad" of multiple Ensign-led teams.</li>
                         <li><strong>Project Management:</strong> Responsible for ensuring their squad submits projects on time.</li>
-                        <li><strong>Progression:</strong> Demonstrated exceptional leadership in previous events to earn this rank.</li>
+                        <li><strong>Progression & Eligibility:</strong> Show great potential in teamwork including some leadership skills.</li>
                         <li><strong>Guidance:</strong> Ensures all Ensigns are contributing and learning.</li>
                     </ul>`
             },
@@ -1083,7 +1083,7 @@
                 desc: `
                     <ul class="list-disc pl-5 space-y-2">
                         <li><strong>Rank:</strong> The first earned promotion.</li>
-                        <li><strong>Requirement:</strong> Awarded for successfully forming a team or joining an existing project.</li>
+                        <li><strong>Requirement:</strong> Awarded for demonstrating potential and quality through their work.</li>
                         <li><strong>Duties:</strong> Contributing code, design, or research to the hackathon project.</li>
                         <li><strong>Next Step:</strong> Demonstrate leadership to earn Lieutenant.</li>
                     </ul>`
